--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -11,13 +11,18 @@
     .btn-blue {
         background: #1880E8;
         color: #ffffff;
-        padding-top: 12px; 
+        padding-top: 12px;
         padding-bottom: 12px;
-        width: 100%; 
+        width: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
         border-radius: 50px;
+        transition: box-shadow 0.3s ease; 
+    }
+    
+    .btn-blue:hover {
+        box-shadow: 0px 3px 5px 0px rgba(255, 255, 255, 0.5);
     }
 
     .btn-white {
@@ -30,5 +35,13 @@
         justify-content: center;
         align-items: center;
         border-radius: 50px;
+        transition: 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
+        box-shadow: 0px 0px 10px 5px rgba(1, 0, 3, 0.75);
+    }
+
+    .btn-white:hover {
+        background: #1880E8;
+        color: #ffffff;
+        box-shadow: 0px 3px 5px 0px rgba(255, 255, 255, 0.5);
     }
 }
