--- a/assets/css/profile.css
+++ b/assets/css/profile.css
@@ -18,6 +18,14 @@
         justify-content: center;
         align-items: center;
         border-radius: 50px;
+        transition: 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
+        box-shadow: 0px 0px 10px 5px rgba(1, 0, 3, 0.75);
+    }
+
+    .btn-white-small:hover {
+        background: #1880E8;
+        color: #ffffff;
+        box-shadow: 0px 3px 5px 0px rgba(255, 255, 255, 0.5);
     }
 
     .active-sidebar{
@@ -48,6 +56,11 @@
         justify-content: center;
         align-items: center;
         border-radius: 50px;
+        transition: box-shadow 0.3s ease; 
+    }
+
+    .btn-blue:hover {
+        box-shadow: 0px 3px 5px 0px rgba(255, 255, 255, 0.5);
     }
 
     .image-cover{
