--- a/assets/css/register.css
+++ b/assets/css/register.css
@@ -18,11 +18,11 @@
         justify-content: center;
         align-items: center;
         border-radius: 50px;
-        transition: box-shadow 0.3s ease; 
     }
     
     .btn-blue:hover {
-        box-shadow: 0px 3px 5px 0px rgba(255, 255, 255, 0.5);
+        margin-left: 1px;
+        box-shadow: 0px 8px 8px 0px rgba(24, 128, 232, 0.2);
     }
 
     .btn-white {
@@ -35,13 +35,13 @@
         justify-content: center;
         align-items: center;
         border-radius: 50px;
-        transition: 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
         box-shadow: 0px 0px 10px 5px rgba(1, 0, 3, 0.75);
     }
 
     .btn-white:hover {
         background: #1880E8;
         color: #ffffff;
-        box-shadow: 0px 3px 5px 0px rgba(255, 255, 255, 0.5);
+        margin-left: 1px;
+        box-shadow: 0px 8px 8px 0px rgba(24, 128, 232, 0.2);
     }
 }
