--- a/assets/css/register.css
+++ b/assets/css/register.css
@@ -18,11 +18,12 @@
         justify-content: center;
         align-items: center;
         border-radius: 50px;
+        transition: box-shadow 0.3s ease; 
     }
     
     .btn-blue:hover {
         margin-left: 1px;
-        box-shadow: 0px 8px 8px 0px rgba(24, 128, 232, 0.2);
+        box-shadow: 0px 8px 8px 0px rgba(24, 128, 232, 0.3);
     }
 
     .btn-white {
@@ -35,6 +36,7 @@
         justify-content: center;
         align-items: center;
         border-radius: 50px;
+        transition: 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
         box-shadow: 0px 0px 10px 5px rgba(1, 0, 3, 0.75);
     }
 
@@ -42,6 +44,6 @@
         background: #1880E8;
         color: #ffffff;
         margin-left: 1px;
-        box-shadow: 0px 8px 8px 0px rgba(24, 128, 232, 0.2);
+        box-shadow: 0px 10px 8px 0px rgba(24, 128, 232, 0.3);
     }
 }
