--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -18,12 +18,12 @@
         justify-content: center;
         align-items: center;
         border-radius: 50px;
-        transition: box-shadow 0.3s ease; 
+        transition: 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
     }
     
     .btn-blue:hover {
         margin-left: 1px;
-        box-shadow: 0px 8px 8px 0px rgba(24, 128, 232, 0.3);
+        box-shadow: 0px 18px 18px 0px rgba(24, 128, 232, 0.5);
     }
 
     .btn-white {
@@ -44,6 +44,6 @@
         background: #1880E8;
         color: #ffffff;
         margin-left: 1px;
-        box-shadow: 0px 10px 8px 0px rgba(24, 128, 232, 0.3);
+        box-shadow: 0px 18px 18px 0px rgba(24, 128, 232, 0.5);
     }
 }
