--- a/assets/css/profile.css
+++ b/assets/css/profile.css
@@ -18,6 +18,7 @@
         justify-content: center;
         align-items: center;
         border-radius: 50px;
+        transition: 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
         box-shadow: 0px 0px 10px 5px rgba(1, 0, 3, 0.75);
     }
 
@@ -56,6 +57,7 @@
         justify-content: center;
         align-items: center;
         border-radius: 50px;
+        transition: 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
     }
 
     .btn-blue:hover {
