--- a/assets/css/profile.css
+++ b/assets/css/profile.css
@@ -61,8 +61,8 @@
     }
 
     .btn-blue:hover {
-        margin-top: 1px;
-        box-shadow: 0px 8px 8px 0px rgba(24, 128, 232, 0.2);
+        margin-left: 1px;
+        box-shadow: 0px 18px 18px 0px rgba(24, 128, 232, 0.5);
     }
 
     .image-cover{
